# swc-plugin-transform-remove-imports

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: branch.yml  cargo_update.yml  publish.yml  pull_request.yml  workflow_lint.yml  workflow_test.yml
src/: lib.rs  transform.rs
tests/__swc_snapshots__/src/transform.rs/: effects.js  example.js  require_example.js
