[package]
name = "swc-plugin-transform-remove-imports"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true

# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"

[dependencies]
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_cached = "2"
swc_core = { version = "32", features = ["ecma_plugin_transform"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasip1 generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
